# scanner

./: LICENSE  Readme.md  justfile  pyproject.toml
.github/workflows/: srvapi-docker-image.yml
docs/: box.drawio  how_it_works.drawio
src/scanapp/: ds_driver.py  env.py  main.py  scanner_control.py  stitcher.py
src/scanapp/widgets/: base.py  main_window.py  message_dialog.py  run_cmd.py  scan.py  scanner_controller.py  sendapi.py  sendmail.py  style.qss
srvapi/: Readme.md  justfile  pyproject.toml  srvapi.Dockerfile
srvapi/app/: main.py
srvapi/app/models/: bill.py
srvapi/app/routers/: bill.py
srvapi/app/utils/: auth.py  email.py
srvapi/src/app/: main.py
srvapi/src/app/models/: bill.py
srvapi/src/app/routers/: bill.py
srvapi/src/app/utils/: email.py
