[tool.poetry]
name = "scanapp"
version = "1.0.0"
description = ""
authors = ["Lukas Voegtle"]
license = "BSD-3-clause"
readme = "Readme.md"

[tool.poetry.dependencies]
python = "^3.10"
rpi-lgpio = "^0.6"
pyqt5 = "^5.15.9"
schwifty = ">=2024.11.0"
pillow = ">=11"
requests = ">=2.32"
numpy = ">=1.24.4"
opencv-python-headless = ">=4.10"

[tool.poetry.scripts]
scanapp = "scanapp.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
