[tool.poetry]
name = "fastapi-bill-uploader"
version = "1.0.0"
description = "A FastAPI application for uploading bills with API key protection."
authors = ["Lukas Voegtle <5764745+voegtlel@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
python-multipart = "^0.0.6"
pydantic = "^2.10.5"
python-dotenv = "^1.0.0"
aiosmtplib = "^3.0.2"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"
black = "^24.10.0"
isort = "^5.12.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
