[project]
name = "app"
version = "1.0.0"
description = "A FastAPI application for uploading bills with API key protecti"
readme = "Readme.md"
requires-python = ">=3.10"
authors = [
    {name = "Lukas Voegtle", email = "5764745+voegtlel@users.noreply.github.com"},
    
]
license = "BSD-3-clause"

dependencies = [
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.10.5",
    "python-dotenv>=1.0.0",
    "aiosmtplib>=3.0.2",
    "fpdf2>=2.8.4",
]

[dependency-groups]
dev = [
    "ruff",
    "aiosmtpd",
]

[project.scripts]
scanapp = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["E741", "E731"]

[tool.ruff]
line-length = 100
target-version = "py310"
include = ["**/*.py", "**/*.pyi"]
exclude = [
  ".idea",
  "docs",
]
